--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,22 +9,22 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header nav {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,7 +32,7 @@ body {
     font-size: 20px;
 }
 
-.header nav ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -55,13 +55,13 @@ p {
     background-position: center;
 }
 
-#float-left {
+.float-left {
     float: left;
     margin-right: 25px;
     max-height: 200px;
 }
 
-#float-right {
+.float-right {
     float: right;
     margin-left: 25px;
     max-height: 200px;
