--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/* Universal selector. */
+/* Universal selector. changes for the entire html file */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -6,30 +6,30 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-/* Element selector. */
+/* Element selector. cahnges the color of the body*/
 body {
     background-color: #d9dcd6;
 }
 
-/* Element selector. */
+/* Element selector. sets the background color of the header and the text color on header and gives it a padding */
 header {
     padding: 20px;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-/* Element selector. */
+/* Element selector. changes the h1 hedding in the header's display and font size */
 header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-/* Element selector. */
+/* Element selector. changes the span element inside the header elements color */
 header h1 .seo {
     color: #d9dcd6;
 }
 
-/* Element selector. */
+/* Element selector. changes the font, font size margin on the right and top padding of the navigation list inside the header */
 header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -38,24 +38,24 @@ header nav {
     font-size: 20px;
 }
 
-/* Element selector. */
+/* Element selector. changes the display and  margin on the left of the navigation list inside the header*/
 header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
-/* type slector */
+/* type slector. changes all hyperlink color and text decoration*/
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
-/* type slector */
+/* type slector. changes all paragraph font size */
 p {
     font-size: 16px;
 }
 
-/* class selector */
+/* class selector. adds an image to the class hero for the figure element*/
 .hero {
     height: 800px;
     width: 100%;
@@ -79,14 +79,14 @@ p {
     max-height: 200px;
 }
 
-/* class selector */
+/* class selector. changes content isdie the element main */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-/* class selector */
+/* class selector. inside the main element, it only makes changes to section element. */
 .content section{
     margin-bottom: 20px;
     padding: 50px;
@@ -96,7 +96,7 @@ p {
     color: #ffffff;
 }
 
-/* class selector */
+/* class selector. changes content inside the aside element. like font, background color, height, width */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -114,6 +114,7 @@ p {
     color: #ffffff;
 }
 
+/* Element selector. changes all h3 headings text alignment and bottom margin */
 h3{
     margin-bottom: 10px;
     text-align: center;
@@ -126,13 +127,13 @@ h3{
     max-width: 150px;
 }
 
-/* Element selector. */
+/* Element selector.changes all h2 headings text alignment and bottom margin */
 h2{
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-/* Element selector. */
+/* Element selector. changes the padding and text alignment of the footer */
 footer {
     padding: 30px;
     clear: both;
